refactor(server): Remove superfluous response from sensor update route
