# server/openapi.yml
@@ -223,13 +223,6 @@ paths:
       responses:
         "200":
           description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  sensor_identifier:
-                    $ref: "#/components/schemas/identifier"
         "401":
           $ref: "#/components/responses/401"
         "403":
